# slm

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  README.md  install.sh
.github/workflows/: ci.yml
config/: com.eccyan.slmfs-fuse.plist  com.eccyan.slmfs.plist
docs/superpowers/plans/: 2026-04-20-engine-scheduler.md  2026-04-20-libmetric.md  2026-04-20-libsheaf.md  2026-04-20-python-frontend.md  2026-04-21-retrieve-archived-search.md
docs/superpowers/specs/: 2026-04-20-superlocal-memoryfs-design.md  2026-04-27-cognitive-ticks-design.md
python/: pyproject.toml
python/slmfs/: __init__.py  __main__.py  add.py  config.py  cooker.py  embedder.py  fuse_layer.py  mcp_server.py  shm_client.py
python/slmfs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/engine/: CMakeLists.txt
src/engine/include/engine/: scheduler.hpp
src/engine/src/: scheduler.cpp
src/langevin/src/: sde_stepper.cpp
src/metric/: CMakeLists.txt
src/metric/include/metric/: fisher_rao.hpp  gaussian_node.hpp  simd_ops.hpp
src/metric/src/: fisher_rao.cpp  simd_ops.cpp
src/persist/: CMakeLists.txt
src/persist/include/persist/: sqlite_store.hpp  store.hpp
src/persist/src/: sqlite_store.cpp
src/slab/include/slab/: header.hpp  ring_buffer.hpp
tests/: CMakeLists.txt  test_langevin.cpp  test_metric.cpp  test_persist.cpp  test_ring_buffer.cpp  test_scheduler.cpp  test_sheaf.cpp  test_slab_allocator.cpp
tests/python/: test_config.py  test_mcp_server.py
